cart view handled

--- a/shop/sell/templates/shop_admin.html
+++ b/shop/sell/templates/shop_admin.html
@@ -23,7 +23,7 @@
 
 
 {% if shop %}
-<li><a href="#">لیست محصولات</a></li>
+<li><a href="shop_basket/{{user.id}}">لیست سبدهای خرید</a></li>
 <li>
     <hr>
 </li>
