--- a/shop/sell/templates/shop_basket_details.html
+++ b/shop/sell/templates/shop_basket_details.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <li>
-    {% for c in list_of_comodity %}
-    {{ c }}
+    {% for s in shop_basket %}
+    {{ s }}
 
 </li>
 
