--- a/shop/sell/templates/shop_admin.html
+++ b/shop/sell/templates/shop_admin.html
@@ -1,50 +1,54 @@
 {% extends "shop_base.html" %}
 
 {% block content %}
-<h3>{{shop.name}}</h3>
-<h3>{{user.username}}</h3>
-<li class="nav-item dropdown">
-    <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        فروشگاه
-    </a>
-    <ul aria-labelledby="navbarDropdown">
-        <li><a href="#"></a></li>
+<div>
+    <h3>نام فروشگاه: {{shop.name}}</h3>
+</div>
+<div>
+    <h3>نام کاربر:{{user.username}}</h3>
+</div>
+
+<li>
+
+    <ul>
         {% if messages %}
-        <ul>
+        <li>
             {% for message in messages %}
             {{ message }}
-</li>
-{% endfor %}
-</ul>
-{% endif %}
+        </li>
+
+        <ul>
+            {% endfor %}
+        </ul>
+        {% endif %}
 
 
 
 
 
-{% if shop %}
-<li><a href="shop_basket/{{user.id}}">لیست سبدهای خرید</a></li>
-<li>
-    <hr>
-</li>
-<li><a href="add_product/{{user.id}}">افزودن محصول</a></li>
-<li>
-    <hr>
-</li>
-<li><a href="#">لیست تگ ها</a></li>
-<li>
-    <hr>
-</li>
-<li><a href="#">افزودن تگ</a></li>
-<li>
-    <hr>
-</li>
-<li><a href="#">لیست دسته بندی ها</a></li>
-<li>
-    <hr>
-</li>
-<li><a href="#">افزودن دسته بندی ها</a></li>
-</ul>
+        {% if shop %}
+        <li><a href="shop_basket/{{user.id}}">لیست سبدهای خرید</a></li>
+        <li>
+            <hr>
+        </li>
+        <li><a href="add_product/{{user.id}}">افزودن محصول</a></li>
+        <li>
+            <hr>
+        </li>
+        <li><a href="shop_edit/{{user.id}}">ویرایش فروشگاه</a></li>
+        <li>
+            <hr>
+        </li>
+        <li><a href="#">افزودن تگ</a></li>
+        <li>
+            <hr>
+        </li>
+        <li><a href="#">لیست دسته بندی ها</a></li>
+        <li>
+            <hr>
+        </li>
+        <li><a href="#">افزودن دسته بندی ها</a></li>
+    </ul>
 </li>
 {% else %}
 
