--- a/shop/sell/templates/shop_basket_details.html
+++ b/shop/sell/templates/shop_basket_details.html
@@ -1,13 +1,28 @@
 {% extends "shop_base.html" %}
 
 {% block content %}
-<li>
-    {% for s in shop_basket %}
-    {{ s }}
 
-</li>
+<div>
 
 
+    <h3>نام کاربری مشتری:{{shop_basket.costumer.username}}</h3>
+</div>
+<div>
 
-{% endfor %}
-{% endblock %}
+
+    <h2>قیمت کل: {{shop_basket.total_price}}</h2>
+</div>
+<ul>
+
+    {% for o in order %}
+    <li></li>
+    نام محصول: {{ o.comodity.name }} - تاریخ ایجاد سفارش:{{o.created_on}} - تاریخ ویرایش سفارش:{{o.opdated_on}}
+    -تعداد سفارش:{{o.number}}
+    </li>
+    <ul>
+
+
+
+
+        {% endfor %}
+        {% endblock %}
