--- a/shop/sell/templates/shop_edit.html
+++ b/shop/sell/templates/shop_edit.html
@@ -3,13 +3,16 @@
 {% block content %}
 
 
-<form>
+<form method="post">
     {% csrf_token %}
 
-    {{form.as_p}}
-    {{shop}}
+    <form action="" method="post">
+        {% csrf_token %}
 
-    <input type="submit" value="تایید شد">
+        {{form.as_p}}
+
+        <input type="submit" value="تایید شد">
+    </form>
 
 </form>
 
