--- a/shop/sell/templates/shop_admin.html
+++ b/shop/sell/templates/shop_admin.html
@@ -43,7 +43,7 @@
         <li>
             <hr>
         </li>
-        <li><a href="#">لیست دسته بندی ها</a></li>
+        <li><a href="comodity_list_view/{{user.id}}">لیست محصولات</a></li>
         <li>
             <hr>
         </li>
