--- a/shop/sell/templates/shop_base.html
+++ b/shop/sell/templates/shop_base.html
@@ -23,10 +23,8 @@
     {% endblock linkCss %}
     <style>
         div {
-            border: 1px solid black;
             border-radius: 5px;
-            border: solid black 2px;
-            margin: 5px;
+            border: solid rgb(151, 202, 183) 0.05px;
         }
 
         h1 {
@@ -36,9 +34,9 @@
 
 
         img {
-            width: 50%;
+            width: 100%;
             height: auto;
-            margin-left: 10%;
+
 
         }
 
