--- a/shop/sell/templates/shop_admin.html
+++ b/shop/sell/templates/shop_admin.html
@@ -21,8 +21,12 @@
             <hr>
             <li><a href="{% url 'sell:sell_report' user.id %}">گزارش خرید مشتریان </a></li>
             <hr>
+            <li><a href="http://127.0.0.1:8000/sell/">نمودار فروش روزانه</a></li>
+            <hr>
             <li><a href="{% url 'post:post_list' %}">وبلاگ</a></li>
             <hr>
+
+
         </div>
         <div class="col-sm-4">
 
